--- a/templates/main.html
+++ b/templates/main.html
@@ -85,6 +85,7 @@
                 <li>Fuzzy queries.</li>
                 <li>Wildcard queries using *.</li>
             </ol>
+            <p class="lead">Documents are taken from the introductory paragraph of Wikipedia articles, using the <a href="https://www.mediawiki.org/wiki/API:Main_page">MediaWiki action API</a></p>
             <p class="lead">
                 Source<br><a href="https://github.com/muraokamasaki">Github</a>
             </p>
